@@ -1,3 +1,8 @@
+2017-11-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/83210
+	* gcc.target/i386/pr83210.c: New test.
+
 2017-11-30  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR target/81616
